backstage/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  labels: 
    app: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      volumes:
        - name: backstage-config
          configMap:
            name: backstage-config
      containers:
        - name: backstage
          image: backstage
          command:
            - node
            - packages/backend
          args:
            - "--config"
            - "app-config.tilt.yaml"
          ports:
            - name: backend
              containerPort: 7007
              protocol: TCP
            - name: frontend
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: "2048Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          volumeMounts:
            - name: backstage-config
              mountPath: "/app/app-config.tilt.yaml"
              subPath: app-config.tilt.yaml
