backstage/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
spec:
  type: ClusterIP
  ports:
    - name: http-backend
      port: 7007
      targetPort: backend
      protocol: TCP
    - name: http-frontend
      port: 3000
      targetPort: frontend
      protocol: TCP
  selector:
    app: backstage
